<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="RtlSymmetry,EllipsizeMaxLines">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/appbar_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/fw_app_bar_color">

            <FrameLayout
                android:id="@+id/left_parent"
                android:layout_width="@dimen/x150"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_btn">

                <ImageView
                    android:id="@+id/appbar_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ebei_empty"
                    android:padding="5dp"
                    android:src="@drawable/back"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/appbar_left_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ebei_cancel"
                    android:textColor="@color/fw_text_important_black"
                    android:textSize="@dimen/x30"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/x100"
                android:layout_marginRight="@dimen/x100"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/fw_text_important_black"
                android:textSize="18sp" />

            <FrameLayout
                android:id="@+id/right_parent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/appbar_selector"
                android:minWidth="@dimen/x100"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:id="@+id/appbar_right"
                    android:layout_width="@dimen/x36"
                    android:layout_height="@dimen/y36"
                    android:layout_gravity="center"
                    android:contentDescription="@string/ebei_empty"
                    android:gravity="center"
                    android:src="@drawable/appbar_more"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/appbar_right_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="@dimen/x24"
                    android:text="@string/ebei_confirm"
                    android:textColor="@color/fw_text_important_black"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
