<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_tip_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_bg_line"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="请添加您本人的银行卡账号"
        android:textColor="@color/color_txt_home_tip"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_add">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_tip_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/text_bank_card_add_people"
                android:textColor="@color/color_txt_33"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_real_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_toRightOf="@+id/tv_tip_people"
                android:textColor="@color/color_txt_33"
                android:textSize="14sp"
                tools:text="*孔儒" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_bg_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_tip_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/text_bank_card_add_num"
                android:textColor="@color/color_txt_33"
                android:textSize="14sp" />

            <com.ald.ebei.ui.EbeiEditTextWithDelNew
                android:id="@+id/et_card_num"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="34dp"
                android:layout_toLeftOf="@+id/tv_support_card"
                android:layout_toRightOf="@+id/tv_tip_num"
                android:background="@null"
                android:hint="请输入银行卡号"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/color_txt_33"
                android:textColorHint="@color/color_text_c4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_support_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="支持银行卡"
                android:textColor="@color/color_colorPrimary"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_bg_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_tip_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/text_bank_card_add_bank"
                android:textColor="@color/color_txt_33"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_toRightOf="@+id/tv_tip_bank"
                android:text="请选择所属银行"
                android:textColor="@color/color_text_c4"
                android:textSize="14sp"
                tools:text="请选择所属银行" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_bg_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_tip_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/text_bank_card_add_phone"
                android:textColor="@color/color_txt_33"
                android:textSize="14sp" />

            <com.ald.ebei.ui.EbeiEditTextWithDelNew
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv_tip_phone"
                android:background="@null"
                android:hint="请输入银行预留11位手机号码"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/color_txt_33"
                android:textColorHint="@color/color_text_c4"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_bg_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tv_tip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/text_bank_card_add_verification"
                android:textColor="@color/color_txt_33"
                android:textSize="14sp" />

            <com.ald.ebei.ui.EbeiEditTextWithDelNew
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="40dp"
                android:layout_toLeftOf="@+id/tv_get_code"
                android:layout_toRightOf="@+id/tv_tip_code"
                android:background="@null"
                android:hint="请输入验证码"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/color_txt_33"
                android:textColorHint="@color/color_text_c4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_btn_stroke_gray"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="获取验证码"
                android:textColor="@color/color_text_c4"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_bg_line" />


        <com.ald.ebei.ui.EbeiNoDoubleClickButton
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_next_button"
            android:text="确认添加"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@mipmap/icon_bottom_loandetails_tips"
        android:drawablePadding="2dp"
        android:text="采用银行级加密技术，确保您的信息安全"
        android:textColor="@color/color_txt_home_tip_bottom"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>